--- a/main.css
+++ b/main.css
@@ -142,3 +142,13 @@ main {
     opacity: 0.6;
 }
 
+.task .actions .edit {
+    background-image: linear-gradient(to right, var(--pink),
+    var(--purple));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.task .actions .delete {
+    color: crimson;
+}
